k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: library-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: dahamsachintha1/auth-service:latest
        ports:
        - containerPort: 3007
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: library-system
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 3007
      targetPort: 3007
