k8s/book-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service
  namespace: library-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-service
  template:
    metadata:
      labels:
        app: book-service
    spec:
      containers:
      - name: book-service
        image: ghcr.io/sachinthadaham/library-manager-microservices/book-service:latest
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: book-service
  namespace: library-system
spec:
  selector:
    app: book-service
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
