k8s/borrow-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: borrow-service
  namespace: library-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: borrow-service
  template:
    metadata:
      labels:
        app: borrow-service
    spec:
      containers:
      - name: borrow-service
        image: ghcr.io/sachinthadaham/library-manager-microservices/borrow-service:latest
        ports:
        - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: borrow-service
  namespace: library-system
spec:
  selector:
    app: borrow-service
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
