k8s/fine-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fine-service
  namespace: library-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fine-service
  template:
    metadata:
      labels:
        app: fine-service
    spec:
      containers:
      - name: fine-service
        image: dahamsachintha1/fine-service:latest
        ports:
        - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: fine-service
  namespace: library-system
spec:
  selector:
    app: fine-service
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3004
