k8s/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: library-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: dahamsachintha1/notification-service:latest
        ports:
        - containerPort: 3006
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: library-system
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 3006
      targetPort: 3006
