k8s/reservation-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-service
  namespace: library-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservation-service
  template:
    metadata:
      labels:
        app: reservation-service
    spec:
      containers:
      - name: reservation-service
        image: dahamsachintha1/reservation-service:latest
        ports:
        - containerPort: 3005
---
apiVersion: v1
kind: Service
metadata:
  name: reservation-service
  namespace: library-system
spec:
  selector:
    app: reservation-service
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 3005
